SourceMetaData/src/objects/Target__c.object
<CustomObject>
    <description>The target of a ticket is the thing that the ticket is about. It will have different record types for different classes of target (eg address/ person/ account)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Additional information about the selected location e.g. 2nd floor, or beware of dog.</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Street__c</fullName>
        <formula>Address__r.Street_Description__c</formula>
        <label>Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Target Address, used for geo-location targets related to a specific address</description>
        <inlineHelpText>The Target Address, used for geo-location targets related to a specific address</inlineHelpText>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Flagged__c</fullName>
        <formula>IF(Contact__r.Account.Flagged__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Customer flagged&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Is it a flagged customer?</inlineHelpText>
        <label>Contact Flagged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Correspondence_Address__c</fullName>
        <formula>SUBSTITUTE(Contact__r.Account.Current_Correspondence_Address__c,&apos;,&apos;,BR())</formula>
        <label>Current Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A target which isn&apos;t a lookup to an address or street etc. 
Example 1: Trolley dumped in the middle of a river.
Example 2: Anti-social activity around major pub areas.</description>
        <inlineHelpText>e.g. At the bottom of the river</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Address_Line_1__c</fullName>
        <formula>Address__r.Full_Address_Line_1__c</formula>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_Line_2__c</fullName>
        <formula>Address__r.Full_Address_Line_2__c</formula>
        <label>Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_Line_3__c</fullName>
        <formula>Address__r.Full_Address_Line_3__c</formula>
        <label>Address Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBH_Department__c</fullName>
        <description>The LBH department that is being targeted.</description>
        <inlineHelpText>The LBH department that is being targeted.</inlineHelpText>
        <label>LBH Department</label>
        <picklist>
            <controllingField>LBH_Directorate__c</controllingField>
            <picklistValues>
                <fullName>Any Department</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT - Business Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer &amp; Business Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation &amp; HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy, Intellegence &amp; Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childrens Safeguarding &amp; Specialist services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; Early Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Safeguarding, Social Care &amp; Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s &amp; Adults&apos; Resource Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning, Regeneration &amp; Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Safety, Environment &amp; Regulatory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing, Leisure &amp; Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non LBH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LBH_Directorate__c</fullName>
        <description>The directorate of the Council that is being targetted</description>
        <inlineHelpText>The directorate of the Council that is being targetted</inlineHelpText>
        <label>LBH Directorate</label>
        <picklist>
            <picklistValues>
                <fullName>Any Directorate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s and Adults Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regeneration, Economic Development and Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LBH_Service_Team__c</fullName>
        <description>The LBH Service team that is being targeted</description>
        <inlineHelpText>The LBH Service team that is being targeted</inlineHelpText>
        <label>LBH Service Team</label>
        <picklist>
            <controllingField>LBH_Department__c</controllingField>
            <picklistValues>
                <fullName>Members Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Hounslow (Customer Service)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Services (Print  Room &amp; Post Room)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Welfare Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupational H&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy &amp; Scrutiny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Parenting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Protection&amp; Safeguarding Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placements &amp; Care Leaving Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Development&amp; Workforce Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEN &amp; Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safeguarding, Review&amp; Quality Assurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OU_type__c</fullName>
        <description>The Organisational Unit that is being targetted</description>
        <inlineHelpText>The Organisational Unit that is being targetted</inlineHelpText>
        <label>Organisational Unit</label>
        <picklist>
            <picklistValues>
                <fullName>London Borough of Hounslow Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Specific Subsection of LBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Council Supplier (complete supplier field)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Council Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_Director__c</fullName>
        <description>The responsible director/ chief exec for the 4 directorates within LBH</description>
        <formula>CASE(TEXT(LBH_Directorate__c)
, 
&quot;Corporate Resources&quot;, 
&quot;Anthony Kemp&quot;
, 
&quot;Children&apos;s and Adults Services&quot;, 
&quot;Sherry Malik&quot;
,
&quot;Regeneration, Economic Development and Environment&quot;, 
&quot;Brendon Walsh&quot;
,
&quot;Chief Executive&quot;, 
&quot;Mary Harpley&quot;
,
&quot;Mary Harpley&quot;)</formula>
        <inlineHelpText>The responsible director/ chief exec for the 4 directorates within LBH</inlineHelpText>
        <label>Responsible Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Remit__c</fullName>
        <description>The specific area of responsibility of the service team being targetted, eg Tidy town collections or blue bade issuing</description>
        <inlineHelpText>The specific area of responsibility of the service team being targetted, eg Tidy town collections or blue bade issuing</inlineHelpText>
        <label>Specific Function Targetted</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Team__c</fullName>
        <label>Service Team</label>
        <picklist>
            <controllingField>LBH_Department__c</controllingField>
            <picklistValues>
                <fullName>Members Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translation Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Welfare Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSSS - Corporate Parenting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSSS - Child Protection &amp; Safeguarding Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSSS - Placements &amp; Care Leaving Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSSS - SEN &amp; Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSSS - Safeguarding, Review&amp; Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSSS - Youth Offending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adults - Early Years &amp; Childcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family &amp; Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locality Based Early Intervention Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Improvement ‐Advisory Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adults - Community Learning &amp; Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adults - Day Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adults - Joint Mental Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adults - Older People&apos;s Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>The name of the Supplier (only use if applicable)</description>
        <inlineHelpText>The name of the Supplier (only use if applicable)</inlineHelpText>
        <label>Supplier Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Description__c</fullName>
        <description>Description of selected target.</description>
        <formula>CASE( RecordType.Name ,
&quot;Location&quot;, 
TRIM(Full_Address_Line_1__c) + &quot;, &quot; +  TRIM(Full_Address_Line_2__c) + &quot;, &quot; +  TRIM(Full_Address_Line_3__c) + 
IF(NOT(ISBLANK(Additional_Information__c)), &quot; (&quot; + Additional_Information__c + &quot;)&quot;, &quot;&quot;)
,
&quot;Account&quot;,  
IF(NOT(ISBLANK(Account__r.Name)), TRIM(Account__r.Name), TRIM(Account__r.FirstName) + &quot; &quot; +  TRIM(Account__r.LastName))
,
&quot;Contact&quot;,  
TRIM(Contact__r.FirstName) + &quot; &quot; +  TRIM(Contact__r.LastName)
+ &quot; (Current correspondence address: &quot; + Current_Correspondence_Address__c + &quot;)&quot;
,
&quot;LBH Area of Responsibility&quot;,  
IF(
    !ISNULL( TEXT(LBH_Service_Team__c)),
    TEXT(LBH_Service_Team__c)+ IF(!ISBLANK(Service_Remit__c), &quot; - &quot;+TRIM(Service_Remit__c),&quot;&quot;),
    TEXT(LBH_Department__c ) + IF(!ISBLANK(Service_Remit__c), &quot; - &quot;+TRIM(Service_Remit__c),&quot;&quot;)
)
,
&quot;Other&quot;, 
TRIM(Description__c) 
, 
&quot;Error&quot; 
)</formula>
        <inlineHelpText>Description of selected target.</inlineHelpText>
        <label>Target Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Summary__c</fullName>
        <description>A summary of the ticket</description>
        <formula>Ticket__r.GLOBAL_Ticket_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A summary of the ticket</inlineHelpText>
        <label>Ticket Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <description>The Ticket that the target is related to</description>
        <inlineHelpText>The Ticket that the target is related to</inlineHelpText>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Target</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Tar{00000000}</displayFormat>
        <label>Target Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <description>The target is an account e.g. School</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>The target is a customer or a contact</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>LBH_Area_of_Responsibility</fullName>
        <active>true</active>
        <description>The target is a specific area of responsibility within the Council</description>
        <label>LBH Area of Responsibility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>The target is a geographical location (address, street or area)</description>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>A descriptive target e.g. at the bottom of the river</description>
        <label>Other</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_specify_address_if_location</fullName>
        <active>true</active>
        <description>You must select an address if the record type is &quot;Location&quot;</description>
        <errorConditionFormula>ISBLANK( Address__c ) &amp;&amp;  RecordType.Name == &quot;Location&quot;</errorConditionFormula>
        <errorDisplayField>Address__c</errorDisplayField>
        <errorMessage>You must select an address.</errorMessage>
    </validationRules>
</CustomObject>